[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/ui.gd" type="Script" id=1]
[ext_resource path="res://UI/themeMain.tres" type="Theme" id=2]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.317647 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.39
anchor_right = 0.5
anchor_bottom = 0.39
margin_left = -192.0
margin_top = -1.52588e-05
margin_right = 192.0
margin_bottom = 130.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "~Paused~"
align = 1
percent_visible = -0.166667

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 384.0
margin_bottom = 83.0
text = "Resume"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 384.0
margin_bottom = 121.0
text = "About"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 384.0
margin_bottom = 159.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
